// Vitest Snapshot v1

exports[`calculate simulations-salarié > ATMP 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . coût total employeur: 2370
salarié . rémunération . net . payé après impôt: 1527
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > ATMP 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . coût total employeur: 2312
salarié . rémunération . net . payé après impôt: 1527
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > ATMP 3`] = `
"salarié . contrat . salaire brut: 2000
salarié . coût total employeur: 2326
salarié . rémunération . net . payé après impôt: 1527
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > CCN HCR 1`] = `
"salarié . contrat . salaire brut: 2500
salarié . coût total employeur: 3480
salarié . rémunération . net . payé après impôt: 1872
salarié . rémunération . net . à payer avant impôt: 1983
Notifications affichées : salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié > CCN batiment 1`] = `
"salarié . contrat . salaire brut: 2500
salarié . coût total employeur: 3837
salarié . rémunération . net . payé après impôt: 1822
salarié . rémunération . net . à payer avant impôt: 1931
Notifications affichées : salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié > CCN batiment 2`] = `
"salarié . contrat . salaire brut: 2500
salarié . coût total employeur: 3819
salarié . rémunération . net . payé après impôt: 1824
salarié . rémunération . net . à payer avant impôt: 1933
Notifications affichées : salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié > CCN batiment 3`] = `
"salarié . contrat . salaire brut: 2500
salarié . coût total employeur: 3869
salarié . rémunération . net . payé après impôt: 1837
salarié . rémunération . net . à payer avant impôt: 1949
Notifications affichées : salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié > CCN compta 1`] = `
"salarié . contrat . salaire brut: 2500
salarié . coût total employeur: 3365
salarié . rémunération . net . payé après impôt: 1898
salarié . rémunération . net . à payer avant impôt: 2006
Notifications affichées : salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié > CCN optique 1`] = `
"salarié . contrat . salaire brut: 2500
salarié . coût total employeur: 3554
salarié . rémunération . net . payé après impôt: 1943
salarié . rémunération . net . à payer avant impôt: 2058
Notifications affichées : salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié > CCN spectacle vivant 1`] = `
"salarié . contrat . salaire brut: 2500
salarié . coût total employeur: 3795
salarié . rémunération . net . payé après impôt: 2039
salarié . rémunération . net . à payer avant impôt: 2155
Notifications affichées : salarié . contrat . CDD . information, salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié > CCN sport 1`] = `
"salarié . contrat . salaire brut: 500
salarié . coût total employeur: 535
salarié . rémunération . net . payé après impôt: 374
salarié . rémunération . net . à payer avant impôt: 374
Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > JEI 1`] = `
"salarié . contrat . salaire brut: 3000
salarié . coût total employeur: 3443
salarié . rémunération . net . payé après impôt: 2168
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > JEI 2`] = `
"salarié . contrat . salaire brut: 20000
salarié . coût total employeur: 26525
salarié . rémunération . net . payé après impôt: 10736
salarié . rémunération . net . à payer avant impôt: 15997
Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > activité partielle 1`] = `
"salarié . contrat . salaire brut: 1560
salarié . coût total employeur: 58
salarié . rémunération . net . payé après impôt: 1307
salarié . rémunération . net . à payer avant impôt: 1307
Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > activité partielle 2`] = `
"salarié . contrat . salaire brut: 4000
salarié . coût total employeur: 980
salarié . rémunération . net . payé après impôt: 2118
salarié . rémunération . net . à payer avant impôt: 2242"
`;

exports[`calculate simulations-salarié > activité partielle 3`] = `
"salarié . contrat . salaire brut: 8000
salarié . coût total employeur: 2100
salarié . rémunération . net . payé après impôt: 3737
salarié . rémunération . net . à payer avant impôt: 4484"
`;

exports[`calculate simulations-salarié > activité partielle 4`] = `
"salarié . contrat . salaire brut: 4000
salarié . coût total employeur: 1614
salarié . rémunération . net . payé après impôt: 2218
salarié . rémunération . net . à payer avant impôt: 2406"
`;

exports[`calculate simulations-salarié > activité partielle 5`] = `
"salarié . contrat . salaire brut: 4000
salarié . coût total employeur: 2838
salarié . rémunération . net . payé après impôt: 2409
salarié . rémunération . net . à payer avant impôt: 2686"
`;

exports[`calculate simulations-salarié > activité partielle 6`] = `
"salarié . contrat . salaire brut: 3000
salarié . coût total employeur: 740
salarié . rémunération . net . payé après impôt: 1631
salarié . rémunération . net . à payer avant impôt: 1682"
`;

exports[`calculate simulations-salarié > activité partielle 7`] = `
"salarié . contrat . salaire brut: 4000
salarié . coût total employeur: 980
salarié . rémunération . net . payé après impôt: 2206
salarié . rémunération . net . à payer avant impôt: 2242"
`;

exports[`calculate simulations-salarié > aides 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . coût total employeur: 2302
salarié . rémunération . net . payé après impôt: 1527
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > aides 2`] = `
"salarié . contrat . salaire brut: 10000
salarié . coût total employeur: 12818
salarié . rémunération . net . payé après impôt: 7687
salarié . rémunération . net . à payer avant impôt: 8925
Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > aides 3`] = `
"salarié . contrat . salaire brut: 2000
salarié . coût total employeur: 1521
salarié . rémunération . net . payé après impôt: 1527
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > aides 4`] = `
"salarié . contrat . salaire brut: 2000
salarié . coût total employeur: 2336
salarié . rémunération . net . payé après impôt: 1667
salarié . rémunération . net . à payer avant impôt: 1720
Notifications affichées : salarié . contrat . CDD . information"
`;

exports[`calculate simulations-salarié > apprentissage 1`] = `
"salarié . contrat . salaire brut: 1500
salarié . coût total employeur: 1547
salarié . rémunération . net . payé après impôt: 1460
salarié . rémunération . net . à payer avant impôt: 1460
Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > apprentissage 2`] = `
"salarié . contrat . salaire brut: 1500
salarié . coût total employeur: 1380
salarié . rémunération . net . payé après impôt: 1460
salarié . rémunération . net . à payer avant impôt: 1460
Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > atmp 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . coût total employeur: 2410
salarié . rémunération . net . payé après impôt: 1527
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > avantages 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . coût total employeur: 2542
salarié . rémunération . net . payé après impôt: 1490
salarié . rémunération . net . à payer avant impôt: 1540"
`;

exports[`calculate simulations-salarié > avantages 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . coût total employeur: 2553
salarié . rémunération . net . payé après impôt: 1489
salarié . rémunération . net . à payer avant impôt: 1539"
`;

exports[`calculate simulations-salarié > avantages 3`] = `
"salarié . contrat . salaire brut: 2000
salarié . coût total employeur: 2465
salarié . rémunération . net . payé après impôt: 1514
salarié . rémunération . net . à payer avant impôt: 1549"
`;

exports[`calculate simulations-salarié > cadre 1`] = `
"salarié . contrat . salaire brut: 3000
salarié . coût total employeur: 4116
salarié . rémunération . net . payé après impôt: 2160
salarié . rémunération . net . à payer avant impôt: 2348"
`;

exports[`calculate simulations-salarié > cadre 2`] = `
"salarié . contrat . salaire brut: 8000
salarié . coût total employeur: 11561
salarié . rémunération . net . payé après impôt: 4973
salarié . rémunération . net . à payer avant impôt: 6250"
`;

exports[`calculate simulations-salarié > cdd 1`] = `
"salarié . contrat . salaire brut: 2200
salarié . coût total employeur: 3169
salarié . rémunération . net . payé après impôt: 1815
salarié . rémunération . net . à payer avant impôt: 1894
Notifications affichées : salarié . contrat . CDD . information"
`;

exports[`calculate simulations-salarié > cdd 2`] = `
"salarié . contrat . salaire brut: 2200
salarié . coût total employeur: 3444
salarié . rémunération . net . payé après impôt: 1897
salarié . rémunération . net . à payer avant impôt: 2009
Notifications affichées : salarié . contrat . CDD . information"
`;

exports[`calculate simulations-salarié > cdd 3`] = `
"salarié . contrat . salaire brut: 2200
salarié . coût total employeur: 3734
salarié . rémunération . net . payé après impôt: 2084
salarié . rémunération . net . à payer avant impôt: 2197
Notifications affichées : salarié . contrat . CDD . information"
`;

exports[`calculate simulations-salarié > cdd 4`] = `
"salarié . contrat . salaire brut: 2200
salarié . coût total employeur: 4406
salarié . rémunération . net . payé après impôt: 2185
salarié . rémunération . net . à payer avant impôt: 2375
Notifications affichées : salarié . contrat . CDD . information"
`;

exports[`calculate simulations-salarié > cdd 5`] = `
"salarié . contrat . salaire brut: 2200
salarié . coût total employeur: 3689
salarié . rémunération . net . payé après impôt: 1792
salarié . rémunération . net . à payer avant impôt: 1871
Notifications affichées : salarié . contrat . CDD . information, salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié > contrat pro 1`] = `
"salarié . contrat . salaire brut: 1500
salarié . coût total employeur: 1566
salarié . rémunération . net . payé après impôt: 1165
salarié . rémunération . net . à payer avant impôt: 1165"
`;

exports[`calculate simulations-salarié > contrat pro 2`] = `
"salarié . contrat . salaire brut: 1500
salarié . coût total employeur: 1566
salarié . rémunération . net . payé après impôt: 1165
salarié . rémunération . net . à payer avant impôt: 1165"
`;

exports[`calculate simulations-salarié > effectif 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . coût total employeur: 2354
salarié . rémunération . net . payé après impôt: 1527
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > effectif 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . coût total employeur: 2365
salarié . rémunération . net . payé après impôt: 1527
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > effectif 3`] = `
"salarié . contrat . salaire brut: 2000
salarié . coût total employeur: 2377
salarié . rémunération . net . payé après impôt: 1527
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > effectif 4`] = `
"salarié . contrat . salaire brut: 2000
salarié . coût total employeur: 2377
salarié . rémunération . net . payé après impôt: 1527
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > frais pro - DFS 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . coût total employeur: 2078
salarié . rémunération . net . payé après impôt: 1622
salarié . rémunération . net . à payer avant impôt: 1622"
`;

exports[`calculate simulations-salarié > frais pro - DFS 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . coût total employeur: 2178
salarié . rémunération . net . payé après impôt: 1549
salarié . rémunération . net . à payer avant impôt: 1584"
`;

exports[`calculate simulations-salarié > frais pro - DFS 3`] = `
"salarié . contrat . salaire brut: 2000
salarié . coût total employeur: 2132
salarié . rémunération . net . payé après impôt: 1562
salarié . rémunération . net . à payer avant impôt: 1598"
`;

exports[`calculate simulations-salarié > frais pro - DFS 4`] = `
"salarié . contrat . salaire brut: 2000
salarié . coût total employeur: 2132
salarié . rémunération . net . payé après impôt: 1562
salarié . rémunération . net . à payer avant impôt: 1598"
`;

exports[`calculate simulations-salarié > frais pro - DFS 5`] = `
"salarié . contrat . salaire brut: 2000
salarié . coût total employeur: 2354
salarié . rémunération . net . payé après impôt: 1527
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > frais pro - DFS 6`] = `
"salarié . contrat . salaire brut: 1700
salarié . coût total employeur: 1765
salarié . rémunération . net . payé après impôt: 1351
salarié . rémunération . net . à payer avant impôt: 1351"
`;

exports[`calculate simulations-salarié > frais pro - DFS 7`] = `
"salarié . contrat . salaire brut: 2600
salarié . coût total employeur: 3221
salarié . rémunération . net . payé après impôt: 2105
salarié . rémunération . net . à payer avant impôt: 2125"
`;

exports[`calculate simulations-salarié > frais pro - abo transports + transports personnels 1`] = `
"salarié . contrat . salaire brut: 3200
salarié . coût total employeur: 4381
salarié . rémunération . net . payé après impôt: 2356
salarié . rémunération . net . à payer avant impôt: 2553"
`;

exports[`calculate simulations-salarié > frais pro - abo transports + transports personnels 2`] = `
"salarié . contrat . salaire brut: 3200
salarié . coût total employeur: 5003
salarié . rémunération . net . payé après impôt: 2631
salarié . rémunération . net . à payer avant impôt: 2926"
`;

exports[`calculate simulations-salarié > frais pro - abo transports + transports personnels 3`] = `
"salarié . contrat . salaire brut: 3200
salarié . coût total employeur: 4687
salarié . rémunération . net . payé après impôt: 2637
salarié . rémunération . net . à payer avant impôt: 2836"
`;

exports[`calculate simulations-salarié > frais pro - abonnement transports publics 1`] = `
"salarié . contrat . salaire brut: 3200
salarié . coût total employeur: 4380
salarié . rémunération . net . payé après impôt: 2354
salarié . rémunération . net . à payer avant impôt: 2551"
`;

exports[`calculate simulations-salarié > frais pro - abonnement transports publics 2`] = `
"salarié . contrat . salaire brut: 3200
salarié . coût total employeur: 5090
salarié . rémunération . net . payé après impôt: 3064
salarié . rémunération . net . à payer avant impôt: 3261"
`;

exports[`calculate simulations-salarié > frais pro - abonnement transports publics 3`] = `
"salarié . contrat . salaire brut: 3200
salarié . coût total employeur: 4380
salarié . rémunération . net . payé après impôt: 2354
salarié . rémunération . net . à payer avant impôt: 2551"
`;

exports[`calculate simulations-salarié > frais pro - abonnement transports publics 4`] = `
"salarié . contrat . salaire brut: 3200
salarié . coût total employeur: 4356
salarié . rémunération . net . payé après impôt: 2330
salarié . rémunération . net . à payer avant impôt: 2527"
`;

exports[`calculate simulations-salarié > frais pro - outre-mer 1`] = `
"salarié . contrat . salaire brut: 3200
salarié . coût total employeur: 4187
salarié . rémunération . net . payé après impôt: 2479
salarié . rémunération . net . à payer avant impôt: 2586"
`;

exports[`calculate simulations-salarié > frais pro - outre-mer 2`] = `
"salarié . contrat . salaire brut: 3200
salarié . coût total employeur: 4200
salarié . rémunération . net . payé après impôt: 2475
salarié . rémunération . net . à payer avant impôt: 2583"
`;

exports[`calculate simulations-salarié > frais pro - titres restaurant 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . coût total employeur: 2394
salarié . rémunération . net . payé après impôt: 1487
salarié . rémunération . net . à payer avant impôt: 1521"
`;

exports[`calculate simulations-salarié > frais pro - titres restaurant 2`] = `
"salarié . contrat . salaire brut: 3000
salarié . coût total employeur: 4298
salarié . rémunération . net . payé après impôt: 1946
salarié . rémunération . net . à payer avant impôt: 2136"
`;

exports[`calculate simulations-salarié > frais pro - titres restaurant 3`] = `
"salarié . contrat . salaire brut: 2000
salarié . coût total employeur: 2438
salarié . rémunération . net . payé après impôt: 1458
salarié . rémunération . net . à payer avant impôt: 1493"
`;

exports[`calculate simulations-salarié > frais pro - transports personnels seul 1`] = `
"salarié . contrat . salaire brut: 3200
salarié . coût total employeur: 4381
salarié . rémunération . net . payé après impôt: 2356
salarié . rémunération . net . à payer avant impôt: 2553"
`;

exports[`calculate simulations-salarié > frais pro - transports personnels seul 2`] = `
"salarié . contrat . salaire brut: 3200
salarié . coût total employeur: 4381
salarié . rémunération . net . payé après impôt: 2356
salarié . rémunération . net . à payer avant impôt: 2553"
`;

exports[`calculate simulations-salarié > frais pro - transports personnels seul 3`] = `
"salarié . contrat . salaire brut: 3200
salarié . coût total employeur: 5002
salarié . rémunération . net . payé après impôt: 2626
salarié . rémunération . net . à payer avant impôt: 2922"
`;

exports[`calculate simulations-salarié > frais pro - transports personnels seul 4`] = `
"salarié . contrat . salaire brut: 3200
salarié . coût total employeur: 4381
salarié . rémunération . net . payé après impôt: 2356
salarié . rémunération . net . à payer avant impôt: 2553"
`;

exports[`calculate simulations-salarié > frais pro - transports personnels seul 5`] = `
"salarié . contrat . salaire brut: 3200
salarié . coût total employeur: 4356
salarié . rémunération . net . payé après impôt: 2331
salarié . rémunération . net . à payer avant impôt: 2528"
`;

exports[`calculate simulations-salarié > frais pro - transports personnels seul 6`] = `
"salarié . contrat . salaire brut: 3200
salarié . coût total employeur: 4151
salarié . rémunération . net . payé après impôt: 2497
salarié . rémunération . net . à payer avant impôt: 2606"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . coût total employeur: 2455
salarié . rémunération . net . payé après impôt: 1601
salarié . rémunération . net . à payer avant impôt: 1636"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . coût total employeur: 2415
salarié . rémunération . net . payé après impôt: 1572
salarié . rémunération . net . à payer avant impôt: 1606"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 3`] = `
"salarié . contrat . salaire brut: 2000
salarié . coût total employeur: 2484
salarié . rémunération . net . payé après impôt: 1601
salarié . rémunération . net . à payer avant impôt: 1636"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 4`] = `
"salarié . contrat . salaire brut: 2000
salarié . coût total employeur: 2454
salarié . rémunération . net . payé après impôt: 1581
salarié . rémunération . net . à payer avant impôt: 1616
Notifications affichées : salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 5`] = `
"salarié . contrat . salaire brut: 2000
salarié . coût total employeur: 2421
salarié . rémunération . net . payé après impôt: 1555
salarié . rémunération . net . à payer avant impôt: 1589
Notifications affichées : salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 6`] = `
"salarié . contrat . salaire brut: 2000
salarié . coût total employeur: 2403
salarié . rémunération . net . payé après impôt: 1566
salarié . rémunération . net . à payer avant impôt: 1601
Notifications affichées : salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 7`] = `
"salarié . contrat . salaire brut: 2000
salarié . coût total employeur: 3330
salarié . rémunération . net . payé après impôt: 1898
salarié . rémunération . net . à payer avant impôt: 1919
Notifications affichées : salarié . temps de travail . heures complémentaires . contrôle heures complémentaires 10 pourcents"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 8`] = `
"salarié . contrat . salaire brut: 2000
salarié . coût total employeur: 3279
salarié . rémunération . net . payé après impôt: 1856
salarié . rémunération . net . à payer avant impôt: 1889
Notifications affichées : salarié . temps de travail . heures complémentaires . contrôle heures complémentaires 10 pourcents"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 1`] = `
"salarié . contrat . salaire brut: 3000
salarié . coût total employeur: 4070
salarié . rémunération . net . payé après impôt: 2269
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 2`] = `
"salarié . contrat . salaire brut: 3000
salarié . coût total employeur: 4070
salarié . rémunération . net . payé après impôt: 2337
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 3`] = `
"salarié . contrat . salaire brut: 3000
salarié . coût total employeur: 4070
salarié . rémunération . net . payé après impôt: 2353
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 4`] = `
"salarié . contrat . salaire brut: 3000
salarié . coût total employeur: 4070
salarié . rémunération . net . payé après impôt: 1935
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 5`] = `
"salarié . contrat . salaire brut: 3000
salarié . coût total employeur: 4070
salarié . rémunération . net . payé après impôt: 2201
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 6`] = `
"salarié . contrat . salaire brut: 9000
salarié . coût total employeur: 12885
salarié . rémunération . net . payé après impôt: 6171
salarié . rémunération . net . à payer avant impôt: 7169"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 7`] = `
"salarié . contrat . salaire brut: 9000
salarié . coût total employeur: 12885
salarié . rémunération . net . payé après impôt: 6678
salarié . rémunération . net . à payer avant impôt: 7169"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 8`] = `
"salarié . contrat . salaire brut: 9000
salarié . coût total employeur: 12885
salarié . rémunération . net . payé après impôt: 6900
salarié . rémunération . net . à payer avant impôt: 7169"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 9`] = `
"salarié . contrat . salaire brut: 3000
salarié . coût total employeur: 4070
salarié . rémunération . net . payé après impôt: 2195
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 10`] = `
"salarié . contrat . salaire brut: 3000
salarié . coût total employeur: 4070
salarié . rémunération . net . payé après impôt: 2353
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 11`] = `
"salarié . contrat . salaire brut: 20000
salarié . coût total employeur: 28340
salarié . rémunération . net . payé après impôt: 12860
salarié . rémunération . net . à payer avant impôt: 15997
Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 12`] = `
"salarié . contrat . salaire brut: 20000
salarié . coût total employeur: 28340
salarié . rémunération . net . payé après impôt: 11049
salarié . rémunération . net . à payer avant impôt: 15997
Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 1`] = `
"salarié . contrat . salaire brut: 3000
salarié . coût total employeur: 4070
salarié . rémunération . net . payé après impôt: 2168
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 2`] = `
"salarié . contrat . salaire brut: 30000
salarié . coût total employeur: 41830
salarié . rémunération . net . payé après impôt: 14709
salarié . rémunération . net . à payer avant impôt: 24265
Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 3`] = `
"salarié . contrat . salaire brut: 3000
salarié . coût total employeur: 4508
salarié . rémunération . net . payé après impôt: 2392
salarié . rémunération . net . à payer avant impôt: 2590
Notifications affichées : salarié . contrat . CDD . information"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 4`] = `
"salarié . contrat . salaire brut: 3000
salarié . coût total employeur: 3749
salarié . rémunération . net . payé après impôt: 2252
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 5`] = `
"salarié . contrat . salaire brut: 30000
salarié . coût total employeur: 41830
salarié . rémunération . net . payé après impôt: 14709
salarié . rémunération . net . à payer avant impôt: 24265
Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 6`] = `
"salarié . contrat . salaire brut: 3000
salarié . coût total employeur: 4070
salarié . rémunération . net . payé après impôt: 2517
salarié . rémunération . net . à payer avant impôt: 2626"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 7`] = `
"salarié . contrat . salaire brut: 30000
salarié . coût total employeur: 41830
salarié . rémunération . net . payé après impôt: 16679
salarié . rémunération . net . à payer avant impôt: 27005
Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 8`] = `
"salarié . contrat . salaire brut: 3000
salarié . coût total employeur: 4070
salarié . rémunération . net . payé après impôt: 2107
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > inversions 1`] = `
"salarié . contrat . salaire brut: 1812
salarié . coût total employeur: 2000
salarié . rémunération . net . payé après impôt: 1405
salarié . rémunération . net . à payer avant impôt: 1412"
`;

exports[`calculate simulations-salarié > inversions 2`] = `
"salarié . contrat . salaire brut: 2554
salarié . coût total employeur: 3398
salarié . rémunération . net . payé après impôt: 1889
salarié . rémunération . net . à payer avant impôt: 2000"
`;

exports[`calculate simulations-salarié > inversions 3`] = `
"salarié . contrat . salaire brut: 2703
salarié . coût total employeur: 3668
salarié . rémunération . net . payé après impôt: 2000
salarié . rémunération . net . à payer avant impôt: 2117"
`;

exports[`calculate simulations-salarié > lodeom 1`] = `
"salarié . contrat . salaire brut: 1521
salarié . coût total employeur: 1521
salarié . rémunération . net . payé après impôt: 1182
salarié . rémunération . net . à payer avant impôt: 1182
Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > lodeom 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . coût total employeur: 2000
salarié . rémunération . net . payé après impôt: 1527
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > lodeom 3`] = `
"salarié . contrat . salaire brut: 3000
salarié . coût total employeur: 3749
salarié . rémunération . net . payé après impôt: 2168
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > lodeom 4`] = `
"salarié . contrat . salaire brut: 4000
salarié . coût total employeur: 5427
salarié . rémunération . net . payé après impôt: 2760
salarié . rémunération . net . à payer avant impôt: 3151"
`;

exports[`calculate simulations-salarié > lodeom 5`] = `
"salarié . contrat . salaire brut: 5500
salarié . coût total employeur: 7784
salarié . rémunération . net . payé après impôt: 3640
salarié . rémunération . net . à payer avant impôt: 4357"
`;

exports[`calculate simulations-salarié > lodeom compétitivité renforcée 1`] = `
"salarié . contrat . salaire brut: 1521
salarié . coût total employeur: 1521
salarié . rémunération . net . payé après impôt: 1182
salarié . rémunération . net . à payer avant impôt: 1182
Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > lodeom compétitivité renforcée 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . coût total employeur: 2000
salarié . rémunération . net . payé après impôt: 1527
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > lodeom compétitivité renforcée 3`] = `
"salarié . contrat . salaire brut: 3000
salarié . coût total employeur: 3000
salarié . rémunération . net . payé après impôt: 2168
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > lodeom compétitivité renforcée 4`] = `
"salarié . contrat . salaire brut: 4000
salarié . coût total employeur: 4941
salarié . rémunération . net . payé après impôt: 2760
salarié . rémunération . net . à payer avant impôt: 3151"
`;

exports[`calculate simulations-salarié > lodeom compétitivité renforcée 5`] = `
"salarié . contrat . salaire brut: 5500
salarié . coût total employeur: 7784
salarié . rémunération . net . payé après impôt: 3640
salarié . rémunération . net . à payer avant impôt: 4357"
`;

exports[`calculate simulations-salarié > lodeom innovation et croissance 1`] = `
"salarié . contrat . salaire brut: 1521
salarié . coût total employeur: 1521
salarié . rémunération . net . payé après impôt: 1182
salarié . rémunération . net . à payer avant impôt: 1182
Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > lodeom innovation et croissance 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . coût total employeur: 2000
salarié . rémunération . net . payé après impôt: 1527
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > lodeom innovation et croissance 3`] = `
"salarié . contrat . salaire brut: 3000
salarié . coût total employeur: 3000
salarié . rémunération . net . payé après impôt: 2168
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > lodeom innovation et croissance 4`] = `
"salarié . contrat . salaire brut: 4000
salarié . coût total employeur: 4408
salarié . rémunération . net . payé après impôt: 2760
salarié . rémunération . net . à payer avant impôt: 3151"
`;

exports[`calculate simulations-salarié > lodeom innovation et croissance 5`] = `
"salarié . contrat . salaire brut: 5500
salarié . coût total employeur: 7541
salarié . rémunération . net . payé après impôt: 3640
salarié . rémunération . net . à payer avant impôt: 4357"
`;

exports[`calculate simulations-salarié > stage 1`] = `
"salarié . contrat . salaire brut: 500
salarié . coût total employeur: 500
salarié . rémunération . net . payé après impôt: 500
salarié . rémunération . net . à payer avant impôt: 500
Notifications affichées : salarié . contrat . stage . avertissement, salarié . contrat . stage . contrôle gratification minimale"
`;

exports[`calculate simulations-salarié > stage 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . coût total employeur: 2484
salarié . rémunération . net . payé après impôt: 1750
salarié . rémunération . net . à payer avant impôt: 1750
Notifications affichées : salarié . contrat . stage . avertissement"
`;

exports[`calculate simulations-salarié > taux spécifiques retraite complémentaire 1`] = `
"salarié . contrat . salaire brut: 1521
salarié . coût total employeur: 1601
salarié . rémunération . net . payé après impôt: 1195
salarié . rémunération . net . à payer avant impôt: 1195
Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > taux spécifiques retraite complémentaire 2`] = `
"salarié . contrat . salaire brut: 2500
salarié . coût total employeur: 3317
salarié . rémunération . net . payé après impôt: 1869
salarié . rémunération . net . à payer avant impôt: 1979"
`;

exports[`calculate simulations-salarié > taux spécifiques retraite complémentaire 3`] = `
"salarié . contrat . salaire brut: 1521
salarié . coût total employeur: 1587
salarié . rémunération . net . payé après impôt: 1170
salarié . rémunération . net . à payer avant impôt: 1170
Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > taux spécifiques retraite complémentaire 4`] = `
"salarié . contrat . salaire brut: 2500
salarié . coût total employeur: 3278
salarié . rémunération . net . payé après impôt: 1854
salarié . rémunération . net . à payer avant impôt: 1938"
`;

exports[`calculate simulations-salarié > temps partiel 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . coût total employeur: 2477
salarié . rémunération . net . payé après impôt: 1527
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > temps partiel 2`] = `
"salarié . contrat . salaire brut: 1857
salarié . coût total employeur: 2453
salarié . rémunération . net . payé après impôt: 1428
salarié . rémunération . net . à payer avant impôt: 1448"
`;

exports[`calculate simulations-salarié > temps partiel 3`] = `
"salarié . contrat . salaire brut: 1000
salarié . coût total employeur: 1085
salarié . rémunération . net . payé après impôt: 770
salarié . rémunération . net . à payer avant impôt: 770
Notifications affichées : salarié . contrat . temps de travail . temps partiel . contrôle temps min"
`;

exports[`calculate simulations-salarié > treizième mois 1`] = `
"salarié . contrat . salaire brut: 2300
salarié . coût total employeur: 3280
salarié . rémunération . net . payé après impôt: 1842
salarié . rémunération . net . à payer avant impôt: 1950"
`;

exports[`calculate simulations-salarié > treizième mois 2`] = `
"salarié . contrat . salaire brut: 2300
salarié . coût total employeur: 3774
salarié . rémunération . net . payé après impôt: 2063
salarié . rémunération . net . à payer avant impôt: 2178"
`;

exports[`calculate simulations-salarié > échelle de salaires 1`] = `
"salarié . contrat . salaire brut: 100
salarié . coût total employeur: 123
salarié . rémunération . net . payé après impôt: 57
salarié . rémunération . net . à payer avant impôt: 57
Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > échelle de salaires 2`] = `
"salarié . contrat . salaire brut: 250
salarié . coût total employeur: 278
salarié . rémunération . net . payé après impôt: 176
salarié . rémunération . net . à payer avant impôt: 176
Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > échelle de salaires 3`] = `
"salarié . contrat . salaire brut: 500
salarié . coût total employeur: 535
salarié . rémunération . net . payé après impôt: 374
salarié . rémunération . net . à payer avant impôt: 374
Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > échelle de salaires 4`] = `
"salarié . contrat . salaire brut: 750
salarié . coût total employeur: 793
salarié . rémunération . net . payé après impôt: 572
salarié . rémunération . net . à payer avant impôt: 572
Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > échelle de salaires 5`] = `
"salarié . contrat . salaire brut: 1000
salarié . coût total employeur: 1050
salarié . rémunération . net . payé après impôt: 770
salarié . rémunération . net . à payer avant impôt: 770
Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > échelle de salaires 6`] = `
"salarié . contrat . salaire brut: 1250
salarié . coût total employeur: 1308
salarié . rémunération . net . payé après impôt: 968
salarié . rémunération . net . à payer avant impôt: 968
Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > échelle de salaires 7`] = `
"salarié . contrat . salaire brut: 1500
salarié . coût total employeur: 1566
salarié . rémunération . net . payé après impôt: 1165
salarié . rémunération . net . à payer avant impôt: 1165
Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > échelle de salaires 8`] = `
"salarié . contrat . salaire brut: 2000
salarié . coût total employeur: 2354
salarié . rémunération . net . payé après impôt: 1527
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > échelle de salaires 9`] = `
"salarié . contrat . salaire brut: 2500
salarié . coût total employeur: 3295
salarié . rémunération . net . payé après impôt: 1848
salarié . rémunération . net . à payer avant impôt: 1957"
`;

exports[`calculate simulations-salarié > échelle de salaires 10`] = `
"salarié . contrat . salaire brut: 3000
salarié . coût total employeur: 4070
salarié . rémunération . net . payé après impôt: 2168
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > échelle de salaires 11`] = `
"salarié . contrat . salaire brut: 4000
salarié . coût total employeur: 5427
salarié . rémunération . net . payé après impôt: 2760
salarié . rémunération . net . à payer avant impôt: 3151"
`;

exports[`calculate simulations-salarié > échelle de salaires 12`] = `
"salarié . contrat . salaire brut: 5000
salarié . coût total employeur: 7078
salarié . rémunération . net . payé après impôt: 3387
salarié . rémunération . net . à payer avant impôt: 3955"
`;

exports[`calculate simulations-salarié > échelle de salaires 13`] = `
"salarié . contrat . salaire brut: 10000
salarié . coût total employeur: 14314
salarié . rémunération . net . payé après impôt: 6108
salarié . rémunération . net . à payer avant impôt: 7972
Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > échelle de salaires 14`] = `
"salarié . contrat . salaire brut: 20000
salarié . coût total employeur: 28340
salarié . rémunération . net . payé après impôt: 10736
salarié . rémunération . net . à payer avant impôt: 15997
Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > échelle de salaires 15`] = `
"salarié . contrat . salaire brut: 100000
salarié . coût total employeur: 128578
salarié . rémunération . net . payé après impôt: 46332
salarié . rémunération . net . à payer avant impôt: 87195
Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > échelle de salaires 16`] = `
"salarié . contrat . salaire brut: 1000000
salarié . coût total employeur: 1243912
salarié . rémunération . net . payé après impôt: 446184
salarié . rémunération . net . à payer avant impôt: 896295
Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;
